[tool.poetry]
name = "tree-disk-rings"
version = "0.4.3"
description = "A package for tree disk rings detection in images"
authors = ["Tony <tonymeissner70@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuke307/tree-disk-rings"
repository = "https://github.com/tuke307/tree-disk-rings"
keywords = ["tree", "rings", "image processing"]
packages = [{ include = "treediskrings", from = "src" }]

include = [
    "src/treediskrings/externals/devernay_1.0/devernay.out",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pillow = "^11.0.0"
scikit-image = "^0.24.0"
opencv-contrib-python-headless = "^4.10.0.84"
natsort = "^8.4.0"
glob2 = "^0.7"
shapely = "^2.0.6"
imageio = "^2.36.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pytest = "^8.3.3"

[tool.poetry.scripts]
tree-disk-rings = "treediskrings.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
